[package]
name = "rust"
version = "0.1.0"
authors = ["Zac Palin <zpalin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
rusoto_core = "0.43.0"
rusoto_s3 = "0.43.0"